--- a/_includes/home-body.html
+++ b/_includes/home-body.html
@@ -114,7 +114,24 @@
 
 
     <!-- Carousel: inserted above menu-cards -->
-    <div id="home-carousel-root"></div>
+    <div id="home-carousel-root">
+        <div class="home-carousel-skeleton" aria-hidden="true">
+            <div class="home-carousel-skeleton-stage">
+                <div class="home-carousel-skeleton-left">
+                    <span class="home-carousel-skeleton-line title"></span>
+                    <span class="home-carousel-skeleton-line wide"></span>
+                    <span class="home-carousel-skeleton-line wide"></span>
+                    <span class="home-carousel-skeleton-line short"></span>
+                </div>
+            </div>
+            <div class="home-carousel-skeleton-toolbar">
+                <div class="home-carousel-skeleton-controls">
+                    <span class="home-carousel-skeleton-select"></span>
+                    <span class="home-carousel-skeleton-select"></span>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!--<div class="separator-line"></div>-->
     <!-- Main content -->
